# Occupancy-SLAM

./: .gitignore  CMakeLists.txt  FuncConvertObs.cpp  FuncLeastSquares.cpp  FuncSubmapJoiningNLLS.cpp  LICENSE.txt  Main_Occupancy_Joining.cpp  Main_Occupancy_SLAM.cpp  MyStruct.cpp  MyStruct.h  README.md  SubFuncs.cpp  SubFuncs.h  config.txt  main.cpp
3D_Preliminary/: README.md
3D_Preliminary/3D_Occupancy_Joining/: FuncEvaluatePose.m  FuncLoadParams.m  FuncMapGrid.m  FuncRY.m  FuncSmoothGrid.m  FuncTFMatrix.m  FuncUpdate3D.m  FuncUpdateGlobalN.m  Main_3D_Occupancy_Joining.m  wrap.m
3D_Preliminary/3D_Occupancy_SLAM/: Func6DoFDelta.m  FuncBlockHashMergeDenseRegion.m  FuncCoarseOccupancyStabilityFilter.m  FuncDelta.m  FuncDenseMapToBlockHash.m  FuncDiffJacobian.m  FuncDrawOccupancyMap.m  FuncEqualDistanceSample3DLines.m  FuncEvaluatePose.m  FuncExpandActiveVoxelIds.m  FuncGet3DIO.m  FuncInit3DOccupancyMap.m  FuncLeastSquares.m  FuncLoadParams.m  FuncMapConst3D.m  FuncMapConst3DByVarId.m  FuncPreclipObsByTruncatedRegion.m  FuncR.m  FuncRX.m  FuncRangeAdaptiveVoxelDownsample.m  FuncResolveOdomSigma.m  FuncRobustWeights.m  FuncRotMatrix2Euler.m  FuncUpdate3D.m  FuncdRZdA.m  InvRotMatrixYPR22.m
3D_Premilinary/: README.md
3D_Premilinary/3D_Occupancy_Joining/: FuncCalOdomfromPose.m  FuncCheckGridSparse.m  FuncCreate3DPoseFrom2D.m  FuncCreateLowFromHigh.m  FuncDelta.m  FuncDiffSubmapJoiningJacobian.m  FuncDiffSubmapJoiningJacobianUneven2.m  FuncDivideData.m  FuncDrawTrajectory.m  FuncEqualDistanceSample3DLines.m  FuncEqualProcessObs.m  FuncEuler2Quat.m  FuncGenerateJoiningObs.m  FuncInit3DGlobalOccupancyMapUneven.m  FuncInitGlobalOccupancyMap.m  FuncInitLocalOccupancyMap.m  FuncInitLocalUnevenOccupancyMap.m  FuncLoadParams.m  FuncMapConst3D.m  FuncMapJoiningGlobal2LocalNLLS.m  FuncProcessObs.m  FuncRZ.m  FuncSmoothN2.m  FuncUpdate3D.m  FuncUpdateAllPoses.m  FuncUpdatePose.m  FuncUpdateUnevenGlobalN.m  Main_3D_Occupancy_Joining.m
3D_Premilinary/3D_Occupancy_SLAM/: Func6DoFDelta.m  FuncBlockHashExtractDenseRegion.m  FuncBlockHashGetOccupiedBBox.m  FuncCalOdomfromPose.m  FuncCalOriginAndMapSize.m  FuncDiffJacobian.m  FuncDownSamplingData.m  FuncDrawTrajectory.m  FuncEqualDistanceSample3DLines.m  FuncEqualProcessObs.m  FuncEstimateMapFrameTransform.m  FuncEuler2Quat.m  FuncFindCellOptimized.m  FuncGlobalVoxelDensityFilter.m  FuncInit3DBlockHashMapNorm.m  FuncInit3DNDTOccupancyMap.m  FuncInit3DOccupancyMap.m  FuncInit3DOccupancyMapNorm.m  FuncInitPoseFromOdom.m  FuncLeastSquares.m  FuncLeastSquaresBresenham.m  FuncLoadParams.m  FuncMapConst3D.m  FuncMapGrid.m  FuncPoseQuat2TFMatrix.m  FuncPreclipObsByTruncatedRegion.m  FuncProcessNearObs.m  FuncProcessObs.m  FuncProcessScan.m  FuncRandomProcessObs.m  FuncSelectLeastSquares.m  FuncSelectMapConst3D.m  FuncSelectMapGrid.m  FuncSelectObs.m  FuncShow3DOccupancyMap.m  FuncShowOGMMap.m  FuncShowOccupancyMap.m  FuncShowPointCloud.m  FuncSmoothN2.m  FuncSmoothN2Subset.m  (+12 more)
Data/ACES/: Odom.txt  Pose.txt  README.md  Range.txt
Data/C5/: Odom.txt  README.md
Data/Intel/: Odom.txt  Pose.txt  README.md  Range.txt
Data/MIT/: Pose.txt  README.md
Data/Museum_b0/: Pose.txt  README.md
Data/Museum_b2/: Pose.txt  README.md
Data/fr079/: Pose.txt  README.md
Data/garage/: Odom.txt  Pose.txt  README.md
